--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <--info--/>
     <--info1·--/>
+     <--info2·--/>
     <color name="colorMe">#FF4081</color>
 </resources>
